fixing swagger security
