# requests/MiscReq.go
@@ -1,0 +1,7 @@
+package requests
+
+// FileUploadRequest represents the structure for file upload input
+type FileUploadRequest struct {
+	File    []byte `form:"file" binding:"required"`
+	Flipped string `form:"flipped"`
+}
